Create abstract class for dao tests